# routes/index.js
@@ -1,17 +1,27 @@
-//routes/index.js
-// cse341/routes/index.js
-const express = require('express');
-const router = express.Router();
-// const contactControllers = require('../controllers/favoritesController');
-// const favoriteValidationRules = require('../middleware/favoriteValidationRules');
-router.use('/', require('./swagger')); // Swagger documentation route
+const passport = require('passport');
 
-// Root route
+//routes/index.js
+const router = require('express').Router();
+
+
+router.use('/', require('./swagger')); 
+router.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+router.use('/user', require('./userRoute'));
+router.use('/favorites', require('./favoritesRoute'));
+
 router.get('/', (req, res) => {
   //#swagger.tags = ['Welcome to the API']
   res.send('Welcome to the favorite API!');
 });
-router.use('/favorites', require('./favoritesRoute'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('logout', function(req, res, next) {
+  req.logout(function(error) {
+    if (error) { return next(error); }
+    res.redirect('/'); 
+  });
+});
 
 
 module.exports = router;
